--- a/css/detail.module.css
+++ b/css/detail.module.css
@@ -33,3 +33,76 @@
     min-height: unset;
   }
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1;
+  margin-right: 15rem;
+}
+
+.form_card {
+  height: 25rem;
+  width: 50rem;
+  padding: 2rem;
+  position: relative;
+  margin: 2rem 0;
+}
+
+.form_card:after {
+  content: '';
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 5%;
+  left: 3%;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  transition: all 0.2s ease-in-out;
+}
+
+.form_radio {
+  display: none;
+}
+
+.form_option__text {
+  composes: smallCaps from './typo.module.css';
+  margin-top: 1rem;
+}
+
+.checkbox {
+  display: none;
+}
+
+.voorzien {
+  z-index: 2;
+}
+
+.form_buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button_back {
+  composes: buttonBack from './buttons.module.css';
+}
+
+.back_image {
+  margin-right: 0.5rem;
+}
+
+.back_text {
+  composes: bold from './typo.module.css';
+}
+
+.button_voorzien {
+  border: 0.2rem solid blueColor;
+  padding: 0.6rem 0.8rem;
+  position: relative;
+  background-color: beigeColor;
+  composes: text from './typo.module.css';
+}
