Firefox porgressbar color fix

--- a/components/Profile/Contributes/contributes.module.css
+++ b/components/Profile/Contributes/contributes.module.css
@@ -59,6 +59,9 @@
   background-color: greenColor;
 }
 
+.progressbar::-moz-progress-bar {
+  background-color: greenColor;
+}
 .progress_text {
   composes: smallCaps from "../../../css/typo.module.css";
 }
