--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -2,7 +2,7 @@
 @value blueColor, yellowColor, beigeColor, redColor, greenColor, lightColor from tokens;
 
 .timeline {
-  background-color: blueColor;
+  /* background-color: blueColor; */
   /* padding: 0 20rem; */
   position: relative;
   display: flex;
@@ -20,7 +20,7 @@
 }
 
 .title {
-  composes: largeTitleOutline from "../../../css/typo.module.css";
+  composes: largeTitleOutline from '../../../css/typo.module.css';
   margin-bottom: 1rem;
   -webkit-text-stroke: 0.3rem beigeColor;
   text-stroke: 0.3rem beigeColor;
@@ -29,7 +29,7 @@
 }
 
 .title_outline {
-  composes: largeTitle from "../../../css/typo.module.css";
+  composes: largeTitle from '../../../css/typo.module.css';
   -webkit-text-stroke: 0.3rem beigeColor;
   text-stroke: 0.3rem beigeColor;
   -webkit-text-fill-color: transparent;
@@ -37,7 +37,7 @@
 }
 
 .title_description {
-  composes: semiBold from "../../../css/typo.module.css";
+  composes: semiBold from '../../../css/typo.module.css';
   color: beigeColor;
 }
 
@@ -88,7 +88,7 @@
 }
 
 .crowdfunding_number {
-  composes: number from "../../../css/typo.module.css";
+  composes: number from '../../../css/typo.module.css';
   -webkit-text-stroke: 0.25rem beigeColor;
   text-stroke: 0.25rem beigeColor;
   -webkit-text-fill-color: transparent;
@@ -112,7 +112,7 @@
 }
 
 .crowdfunding_value {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   background-color: greenColor;
   border: 0.2rem solid blueColor;
   position: relative;
@@ -123,7 +123,7 @@
 }
 
 .crowdfunding_value:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -142,7 +142,7 @@
 }
 
 .button_back__crowdfunding {
-  composes: buttonBack from "../../../css/buttons.module.css";
+  composes: buttonBack from '../../../css/buttons.module.css';
 }
 
 .form_card__crowdfunding__input {
@@ -151,7 +151,7 @@
 }
 
 .form_option__text__crowdfunding {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
 }
 
 .input {
@@ -160,7 +160,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from "../../../css/typo.module.css";
+  composes: empty from '../../../css/typo.module.css';
   padding: 0.2rem 0.5rem;
 }
 
@@ -170,7 +170,7 @@
   position: relative;
   background-color: blueColor;
   color: beigeColor;
-  composes: text from "../../../css/typo.module.css";
+  composes: text from '../../../css/typo.module.css';
 }
 
 .crowdfunding_timeline {
