Notifications Form Margin Fix

--- a/components/Profile/Notifications/notifications.module.css
+++ b/components/Profile/Notifications/notifications.module.css
@@ -43,7 +43,7 @@
   grid-column-gap: 5rem;
   padding: 3rem 10rem 3rem 2rem;
   background-color: #f3e3cb;
-  margin-top: 2rem;
+  margin-bottom: 8rem;
 }
 
 .donation_option {
