--- a/css/profile.module.css
+++ b/css/profile.module.css
@@ -45,8 +45,13 @@
 .grid_notifications,
 .grid_notifications__items {
   display: grid;
-  grid-template-columns: 1.2fr 1fr 1fr 2fr 0.5fr;
+  grid-template-columns: 1.2fr 1fr 1fr 1.5fr 0.5fr;
   padding-right: 10rem;
+}
+
+.grid_item__hidden {
+  display: none;
+  align-items: center;
 }
 
 .grid_requests,
@@ -70,7 +75,7 @@
 .grid_items {
   padding: 1.5rem 10rem 1.5rem 0;
   background-color: #f3e3cb;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .grid_items:nth-child(even) {
@@ -170,10 +175,48 @@
   composes: miniButtonImage from "./buttons.module.css";
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1350px) {
   .grid_notifications,
   .grid_notifications__items {
+    grid-template-columns: 1fr 2fr 0.5fr;
+    grid-column-gap: 2rem;
     padding-right: 4rem;
+    align-items: flex-start;
+  }
+
+  .grid_item__hidden,
+  .grid_item__name__hidden {
+    display: flex;
+  }
+
+  .grid_item__title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    composes: smallCaps from "./typo.module.css";
+  }
+
+  .grid_item__type__hidden {
+    padding-left: 1.5rem;
+  }
+
+  .grid_item__name__hidden {
+    margin-bottom: 1rem;
+    composes: bold from "./typo.module.css";
+  }
+
+  .grid_item__mobile,
+  .grid_title__type,
+  .grid_title__durver {
+    display: none;
+  }
+
+  .grid_item__buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .input_submit {
+    margin: 0.5rem 0;
   }
 
   .grid_requests,
@@ -205,6 +248,16 @@
     flex-direction: column;
   }
 
+  .grid_notifications,
+  .grid_notifications__items {
+    grid-template-columns: 1.2fr 2fr 0.2fr;
+    padding-right: 2rem;
+  }
+
+  .grid_title__end {
+    display: none;
+  }
+
   .needs {
     margin-top: 3rem;
   }
@@ -221,12 +274,6 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .grid_notifications,
-  .grid_notifications__items {
-    grid-template-columns: 1.2fr 1fr 1fr 2fr 0.5fr;
-    padding-right: 2rem;
-  }
-
   .grid_requests,
   .grid_requests__items {
     padding-right: 2rem;
@@ -247,13 +294,22 @@
     display: flex;
     flex-wrap: nowrap;
     white-space: nowrap;
+    padding-left: 2rem;
   }
+
+  .subtitle,
+  .project_update {
+    padding: 0 2rem;
+  }
+
+  /* .subtitle {
+    composes: largeTitle from "./typo.module.css";
+  } */
 
   .tabs::-webkit-scrollbar {
     display: none;
   }
 
-  /* Hide scrollbar for IE, Edge and Firefox */
   .tabs {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -271,7 +327,9 @@
 
   .grid_notifications,
   .grid_notifications__items {
-    padding-right: 1rem;
+    padding: 3rem 2rem;
+    display: flex;
+    flex-direction: column;
   }
 
   .grid_requests,
@@ -282,5 +340,25 @@
   .grid_selectedproject,
   .grid_selectedproject__items {
     padding-right: 1rem;
+  }
+
+  .grid_notifications {
+    display: none;
+  }
+
+  .grid_item__type__hidden,
+  .grid_item__title,
+  .grid_title__left {
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  .grid_item__type__hidden {
+    margin-bottom: 3rem;
+  }
+  .grid_item__buttons {
+    flex-direction: row;
+    align-items: center;
+    align-self: flex-end;
   }
 }
