--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -53,7 +53,7 @@
   }
 
   .viewLarge {
-    margin: 0 0 5rem 1.5rem;
+    margin: 0 0 5rem 0;
   }
 }
 
@@ -63,6 +63,6 @@
   }
 
   .viewLarge {
-    margin: 0 0 5rem 0.5rem;
+    margin: 0 0 5rem 0;
   }
 }
