--- a/components/Profile/Notifications/notifications.module.css
+++ b/components/Profile/Notifications/notifications.module.css
@@ -49,6 +49,7 @@
 .donation_option {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .label {
@@ -68,4 +69,38 @@
 
 .checkbox {
   display: none;
+}
+
+@media screen and (max-width: 1150px) {
+  .donation_form {
+    grid-column-gap: 2rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .donation_form {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 2rem 3rem 2rem;
+  }
+
+  .donation_option {
+    margin: 2rem 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .donation_form {
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1rem;
+    padding: 3rem 1rem 3rem 1rem;
+    background-color: #f3e3cb;
+    margin-bottom: 8rem;
+  }
+
+  .donation_option {
+    margin: 1rem 0;
+  }
 }
