--- a/css/profile.module.css
+++ b/css/profile.module.css
@@ -47,6 +47,7 @@
   display: grid;
   grid-template-columns: 1.2fr 1fr 1fr 1.5fr 0.5fr;
   padding-right: 10rem;
+  grid-column-gap: 1rem;
 }
 
 .grid_item__hidden {
@@ -60,6 +61,7 @@
   padding-right: 10rem;
   grid-template-columns: 5rem 1.2fr 1fr 2fr 0.5fr;
   padding-right: 10rem;
+  grid-column-gap: 1rem;
 }
 
 .grid_selectedproject,
@@ -76,6 +78,12 @@
   padding: 1.5rem 10rem 1.5rem 0;
   background-color: #f3e3cb;
   align-items: flex-start;
+}
+
+.grid_image_pending__text {
+  display: none;
+  composes: text from "./typo.module.css";
+  font-style: italic;
 }
 
 .grid_items:nth-child(even) {
@@ -221,7 +229,10 @@
 
   .grid_requests,
   .grid_requests__items {
+    display: grid;
+    grid-template-columns: 5rem 1fr 2fr 0.5fr;
     padding-right: 4rem;
+    grid-column-gap: 2rem;
   }
 
   .grid_selectedproject,
@@ -254,6 +265,13 @@
     padding-right: 2rem;
   }
 
+  .grid_requests,
+  .grid_requests__items {
+    display: grid;
+    grid-template-columns: 5rem 1.2fr 2fr 0.2fr;
+    padding-right: 2rem;
+  }
+
   .grid_title__end {
     display: none;
   }
@@ -274,11 +292,12 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .grid_requests,
+  /* .grid_requests,
   .grid_requests__items {
     padding-right: 2rem;
     grid-template-columns: 5rem 1.2fr 1fr 2fr 0.5fr;
   }
+   */
 
   .grid_selectedproject,
   .grid_selectedproject__items {
@@ -303,10 +322,6 @@
     padding: 0 2rem;
   }
 
-  /* .subtitle {
-    composes: largeTitle from "./typo.module.css";
-  } */
-
   .tabs::-webkit-scrollbar {
     display: none;
   }
@@ -324,6 +339,7 @@
   .grid_selectedproject__items {
     display: flex;
     flex-direction: column;
+    padding-right: 1rem;
   }
 
   .grid_notifications,
@@ -335,15 +351,13 @@
 
   .grid_requests,
   .grid_requests__items {
-    padding-right: 1rem;
+    padding: 3rem 2rem;
+    display: flex;
+    flex-direction: column;
   }
 
-  .grid_selectedproject,
-  .grid_selectedproject__items {
-    padding-right: 1rem;
-  }
-
-  .grid_notifications {
+  .grid_notifications,
+  .grid_requests {
     display: none;
   }
 
@@ -354,7 +368,8 @@
     margin-left: 0;
   }
 
-  .grid_item__type__hidden {
+  .grid_item__type__hidden,
+  .grid_item__type__hidden__requests {
     margin-bottom: 3rem;
   }
   .grid_item__buttons {
@@ -362,6 +377,17 @@
     align-items: center;
     align-self: flex-end;
     margin-top: 3rem;
+  }
+
+  .grid_image_pending__text {
+    display: flex;
+    margin-left: 1rem;
+  }
+
+  .pending {
+    margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
   }
 }
 
