--- a/components/Empty/empty.module.css
+++ b/components/Empty/empty.module.css
@@ -21,6 +21,7 @@
   z-index: 2;
   margin-top: auto;
   margin-bottom: auto;
+  padding: 0 3rem;
 }
 
 .empty_state__text {
@@ -89,5 +90,33 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 850px) {
+  .empty_state {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    /* margin-top: 1rem;
+    margin-bottom: 3rem; */
+    padding: 0 3rem;
+  }
+
+  .empty_state__text {
+    composes: mediumTitle from "../../css/typo.module.css";
+    color: #e5d6c0;
+    text-align: center;
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
+
+  .empty_state__text__outline {
+    composes: mediumTitleOutline from "../../css/typo.module.css";
+    -webkit-text-stroke: 0.1rem #e5d6c0;
+    text-stroke: 0.1rem #e5d6c0;
+    display: inline-block;
+    font-size: 2.8rem;
+    line-height: 3rem;
+  }
 }
