--- a/css/profile.module.css
+++ b/css/profile.module.css
@@ -5,6 +5,8 @@
   composes: viewLarge from "./layout.module.css";
 }
 
+/* Tabs */
+
 .tabs {
   border-bottom: 0.4rem solid blueColor;
   margin-bottom: 8rem;
@@ -28,6 +30,8 @@
   margin-right: 0;
 }
 
+/* Subdivision */
+
 .subdivision {
   margin-bottom: 5rem;
 }
@@ -35,6 +39,7 @@
 .subtitle {
   composes: mediumTitleOutline from "./typo.module.css";
   margin-bottom: 3rem;
+  margin-top: 1rem;
 }
 
 .subtitle_empty {
@@ -48,11 +53,6 @@
   grid-template-columns: 1.2fr 1fr 1fr 1.5fr 0.5fr;
   padding-right: 10rem;
   grid-column-gap: 1rem;
-}
-
-.grid_item__hidden {
-  display: none;
-  align-items: center;
 }
 
 .grid_requests,
@@ -73,17 +73,16 @@
   grid-row-gap: 5rem;
 }
 
-.grid_items,
-.grid_items {
-  padding: 1.5rem 10rem 1.5rem 0;
-  background-color: #f3e3cb;
-  align-items: flex-start;
+.grid_item__hidden {
+  display: none;
+  align-items: center;
 }
 
-.grid_image_pending__text {
-  display: none;
-  composes: text from "./typo.module.css";
-  font-style: italic;
+.grid_items,
+.grid_items {
+  padding: 1.5rem 10rem 1.5rem 2rem;
+  background-color: #f3e3cb;
+  align-items: flex-start;
 }
 
 .grid_items:nth-child(even) {
@@ -97,10 +96,6 @@
 .grid_item {
   display: flex;
   align-items: center;
-}
-
-.grid_item__info {
-  grid-area: info;
 }
 
 .grid_item__image {
@@ -121,24 +116,21 @@
   margin-bottom: 1rem;
 }
 
-.grid_title__left {
-  margin-left: 1rem;
-}
-
 .grid_title__end {
   text-align: center;
 }
 
-.grid_bold {
-  composes: bold from "./typo.module.css";
-}
-
-.grid_bold__title {
-  margin-left: 1.5rem;
+.grid_item__title {
+  composes: smallCaps from "./typo.module.css";
+  margin-top: 0.5rem;
 }
 
 .grid_text {
   composes: text from "./typo.module.css";
+}
+
+.grid_bold {
+  composes: bold from "./typo.module.css";
 }
 
 .grid_text__italic {
@@ -198,9 +190,7 @@
   }
 
   .grid_item__title {
-    font-size: 2rem;
     margin-bottom: 1rem;
-    composes: smallCaps from "./typo.module.css";
   }
 
   .grid_item__type__hidden {
@@ -335,6 +325,12 @@
     margin-right: 2rem;
   }
 
+  .subtitle {
+    margin-left: 2rem;
+    padding: 0;
+    padding-bottom: 1rem;
+  }
+
   .grid_selectedproject,
   .grid_selectedproject__items {
     display: flex;
@@ -364,19 +360,18 @@
   .grid_item__type__hidden,
   .grid_item__title,
   .grid_title__left {
-    padding-left: 0;
     margin-left: 0;
   }
 
   .grid_item__type__hidden,
   .grid_item__type__hidden__requests {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
   .grid_item__buttons {
     flex-direction: row;
     align-items: center;
     align-self: flex-end;
-    margin-top: 3rem;
+    margin-top: 1rem;
   }
 
   .grid_image_pending__text {
@@ -396,7 +391,6 @@
     padding-left: 2rem;
   }
 
-  .subtitle_notifications,
   .project_update,
   .subdivision_progress {
     padding: 0 2rem;
