--- a/css/typo.module.css
+++ b/css/typo.module.css
@@ -123,7 +123,7 @@
 
 .bold {
   font-family: Montserrat, sans-serif;
-  font-weight: 650;
+  font-weight: 700;
   font-size: 1.8rem;
   color: blueColor;
   line-height: 2.2rem;
@@ -144,7 +144,7 @@
 }
 
 .number {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   font-weight: 900;
   text-transform: uppercase;
