--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -2,8 +2,6 @@
 @value blueColor, yellowColor, beigeColor, redColor, greenColor, lightColor from tokens;
 
 .timeline {
-  /* background-color: blueColor; */
-  /* padding: 0 20rem; */
   position: relative;
   display: flex;
   justify-content: flex-start;
@@ -21,7 +19,7 @@
 }
 
 .title {
-  composes: largeTitleOutline from '../../../css/typo.module.css';
+  composes: largeTitleOutline from "../../../css/typo.module.css";
   margin-bottom: 1rem;
   -webkit-text-stroke: 0.3rem beigeColor;
   text-stroke: 0.3rem beigeColor;
@@ -30,7 +28,7 @@
 }
 
 .title_outline {
-  composes: largeTitle from '../../../css/typo.module.css';
+  composes: largeTitle from "../../../css/typo.module.css";
   -webkit-text-stroke: 0.3rem beigeColor;
   text-stroke: 0.3rem beigeColor;
   -webkit-text-fill-color: transparent;
@@ -38,7 +36,7 @@
 }
 
 .title_description {
-  composes: semiBold from '../../../css/typo.module.css';
+  composes: semiBold from "../../../css/typo.module.css";
   color: beigeColor;
 }
 
@@ -89,7 +87,7 @@
 }
 
 .crowdfunding_number {
-  composes: number from '../../../css/typo.module.css';
+  composes: number from "../../../css/typo.module.css";
   -webkit-text-stroke: 0.25rem beigeColor;
   text-stroke: 0.25rem beigeColor;
   -webkit-text-fill-color: transparent;
@@ -110,10 +108,11 @@
 .value {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .crowdfunding_value {
-  composes: smallCaps from '../../../css/typo.module.css';
+  composes: smallCaps from "../../../css/typo.module.css";
   background-color: greenColor;
   border: 0.2rem solid blueColor;
   position: relative;
@@ -124,7 +123,7 @@
 }
 
 .crowdfunding_value:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -138,12 +137,17 @@
   transition: all 0.2s ease-in-out;
 }
 
+.value:hover .crowdfunding_value:after {
+  top: 0;
+  left: 0;
+}
+
 .back_text__crowdfunding {
   color: beigeColor;
 }
 
 .button_back__crowdfunding {
-  composes: buttonBack from '../../../css/buttons.module.css';
+  composes: buttonBack from "../../../css/buttons.module.css";
 }
 
 .form_card__crowdfunding__input {
@@ -152,7 +156,7 @@
 }
 
 .form_option__text__crowdfunding {
-  composes: smallCaps from '../../../css/typo.module.css';
+  composes: smallCaps from "../../../css/typo.module.css";
 }
 
 .input {
@@ -161,8 +165,16 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from '../../../css/typo.module.css';
+  composes: empty from "../../../css/typo.module.css";
   padding: 0.2rem 0.5rem;
+  color: beigeColor;
+  width: 25rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 .button_voorzien__crowdfunding {
@@ -171,10 +183,24 @@
   position: relative;
   background-color: blueColor;
   color: beigeColor;
-  composes: text from '../../../css/typo.module.css';
+  composes: text from "../../../css/typo.module.css";
 }
 
 .crowdfunding_timeline {
   display: flex;
   margin-top: auto;
+}
+
+@media screen and (max-width: 850px) {
+  .timeline {
+    padding: 10rem 20rem;
+    margin-right: 10rem;
+  }
+
+  .donations_timeline {
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    align-items: center;
+  }
 }
