--- a/components/Detail/Creatie/Feedback/feedback.module.css
+++ b/components/Detail/Creatie/Feedback/feedback.module.css
@@ -36,7 +36,7 @@
 }
 
 .feedback_card:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -51,23 +51,23 @@
 }
 
 .feedback_name {
-  composes: smallCaps from '../../../../css/typo.module.css';
+  composes: smallCaps from "../../../../css/typo.module.css";
   margin-bottom: 2rem;
 }
 
 .feedback_date {
-  composes: smallText from '../../../../css/typo.module.css';
+  composes: smallText from "../../../../css/typo.module.css";
   text-align: center;
   margin-top: 0.5rem;
 }
 
 .feedback_type {
-  composes: smallCaps from '../../../../css/typo.module.css';
+  composes: smallCaps from "../../../../css/typo.module.css";
   text-align: center;
 }
 
 .feedback_text {
-  composes: feedback from '../../../../css/typo.module.css';
+  composes: feedback from "../../../../css/typo.module.css";
   font-style: italic;
 }
 
@@ -84,4 +84,45 @@
   border-radius: 50%;
   display: inline-block;
   border: 0.3rem solid blueColor;
+}
+
+@media screen and (max-width: 850px) {
+  .feedback {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    position: relative;
+    align-items: flex-start;
+    width: 100%;
+    height: 28rem;
+  }
+
+  .feedback:nth-child(even) {
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  .feedback_content {
+    z-index: 2;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+    bottom: 0;
+    align-self: flex-end;
+  }
+
+  .feedback:nth-child(even) .feedback_content {
+    align-self: flex-start;
+  }
+
+  .feedback_card {
+    border: 0.3rem solid blueColor;
+    padding: 3rem;
+    position: relative;
+    background-color: beigeColor;
+    width: 40vw;
+    height: 25vh;
+    margin: 1.5rem;
+  }
 }
