--- a/css/detail.module.css
+++ b/css/detail.module.css
@@ -25,16 +25,6 @@
   padding: 10rem 0;
 }
 
-@media screen and (max-width: 850px) {
-  .part_project {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 5rem 2rem 0 2rem;
-    min-height: unset;
-  }
-}
-
 .form {
   display: flex;
   flex-direction: column;
@@ -81,6 +71,7 @@
 
 .voorzien {
   z-index: 2;
+  cursor: pointer;
 }
 
 .form_buttons {
@@ -90,6 +81,7 @@
 
 .button_back {
   composes: buttonBack from "./buttons.module.css";
+  cursor: pointer;
 }
 
 .back_image {
@@ -106,4 +98,43 @@
   position: relative;
   background-color: beigeColor;
   composes: text from "./typo.module.css";
+}
+
+.button_voorzien:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  bottom: 0.75rem;
+  right: 0.75rem;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  transition: all 0.2s ease-in-out;
+}
+
+.voorzien:hover .button_voorzien:after {
+  bottom: 0;
+  right: 0;
+}
+
+@media screen and (max-width: 850px) {
+  .part_project {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 2rem;
+    min-height: unset;
+  }
+  .part_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    margin-right: 10rem;
+    padding: 0;
+    margin-bottom: 5rem;
+  }
 }
